# vitimonitor

./: .gitignore  404.html  README.md  index.html  mkdocs.yaml  questionario.html
SUMMARY/: index.html
docs/: README.md  SUMMARY.md  directory_structure.md  enologo_requests.md  faq.md  feasibility_structure.md  glossario.md  idea.md  index.md  modelli.md  mvp.md  questionario.html  questionario.md  requisiti.md  roadmap.md
docs/other_docs/: idea.md
enologo_requests/: index.html
faq/: index.html
feasibility/: Makefile  README.md  config.yml  requirements.txt
glossario/: index.html
idea/: index.html
model-feasibility/: Makefile  requirements.txt  sensordata.db
modelli/: index.html
mvp/: index.html
questionario/: index.html
requisiti/: index.html
roadmap/: index.html
search/: search_index.json
site/: 404.html  index.html
zephyr-feasibility/: CMakeLists.txt  Makefile  README.md  prj.conf  setup_zephyr  zephyr_driver_emul.py  zephyr_env.py
zephyr-feasibility/boards/: board.overlay  esp32s3.overlay  esp32s3_devkitc.overlay  native_sim.overlay
zephyr-feasibility/docs/: setup_zephyr.md
zephyr-feasibility/modules/mock_sensor/drivers/: CMakeLists.txt  Kconfig
zephyr-feasibility/modules/mock_sensor/drivers/mock_sensor/: CMakeLists.txt  Kconfig  mock_sensor.c  mock_sensor.h
zephyr-feasibility/modules/mock_sensor/dts/bindings/input/: mock,sensor.yaml
zephyr-feasibility/modules/mock_sensor/zephyr/: module.yaml
zephyr-feasibility/modules/rohm_bh1750_emul/drivers/: CMakeLists.txt
zephyr-feasibility/modules/rohm_bh1750_emul/drivers/rohm_bh1750_emul/: CMakeLists.txt  Kconfig  rohm_bh1750_emul.c  rohm_bh1750_emul.h
zephyr-feasibility/modules/rohm_bh1750_emul/dts/bindings/sensor/: rohm,bt1750-emul.yaml
zephyr-feasibility/modules/sensirion_sht3xd_emul/drivers/: Kconfig
zephyr-feasibility/modules/sensirion_sht3xd_emul/drivers/sensirion_sht3xd_emul/: CMakeLists.txt  Kconfig  sensirion_sht3xd_emul.c
zephyr-feasibility/modules/sensirion_sht3xd_emul/dts/bindings/sensor/: sensirion,sht3xd-emul.yaml
zephyr-feasibility/modules/sensirion_sht3xd_emul/zephyr/: module.yaml
zephyr-feasibility/modules/sx1262_emul/drivers/: CMakeLists.txt  Kconfig
zephyr-feasibility/modules/sx1262_emul/drivers/sx1262_emul/: CMakeLists.txt  Kconfig  sx1262_emul.c  sx1262_emul.h
zephyr-feasibility/modules/sx1262_emul/dts/: native_sim.overlay
zephyr-feasibility/modules/sx1262_emul/dts/bindings/rf/: semtech,sx1262-emul.yaml  sx1262,emul.yaml
zephyr-feasibility/modules/sx1262_emul/zephyr/: module.yaml
zephyr-feasibility/overlays/: riscv.overlay
zephyr-feasibility/src/: Kconfig  main.c
(+76 files in other folders)
